fix(aio): fix alignment of `.api-filter` panel
Fixes #17395

--- a/aio/src/styles/2-modules/_api-list.scss
+++ b/aio/src/styles/2-modules/_api-list.scss
@@ -1,14 +1,3 @@
-/* API EDIT ICON */
-#api {
-  .info-banner .material-icons {
-    right: 48px;
-
-    @media screen and (max-width: 600px) {
-        left: 50px;
-    }
-  }
-}
-
 /* API LIST STYLES */
 
 aio-api-list {
